# Live-Network-Traffic-Analyzer

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: telegraf.conf
grafana/dashboards/: default_dashboard.json
grafana/provisioning/datasources/: datasource.yaml
scripts/: initialize_db.sh
src/: lib.rs
src/app/: enricher.rs  listener.rs
src/cmd/: listener.rs
src/db/: cidr_lookup.rs  influx_db.rs  ip_lookup.rs  mod.rs
src/kafka/: consumer.rs  producer.rs
src/process/: enricher.rs  mod.rs
