[package]
name = "ta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
netflow_parser = "0.3.6"
rdkafka = "0.36.2"
serde = "1.0.204"
reqwest = "0.12.5"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["v4"] }
cidr = "0.2.3"
influxdb = { version = "0.7.2", features = ["derive"] }
chrono = "0.4.38"


[[bin]]
name = "ta-listener"
path = "src/app/listener.rs"

[[bin]]
name = "ta-enricher"
path = "src/app/enricher.rs"
